done sidebar api for wallet
