# routes/expertRoutes.js
@@ -5,7 +5,7 @@ const validator = require('../middleware/joi.validator')
 
 const { isAuthenticate, checkTransactionPassword } = require('../middleware/auth');
 const { CreateExpertValidate, UpdateExpertValidate, changePasswordExpertValidate } = require('../validators/expertValidator');
-const { createUser, updateUser, changePassword, expertList, getNotification } = require('../controllers/expertController');
+const { createUser, updateUser, changePassword, expertList, getNotification, getMatchCompetitionsByType, getMatchDatesByCompetitionId, getMatchDatesByCompetitionIdAndDate } = require('../controllers/expertController');
 
 
 
@@ -15,6 +15,10 @@ router.post('/update',isAuthenticate,checkTransactionPassword,validator(UpdateEx
 router.post('/password',isAuthenticate,checkTransactionPassword,validator(changePasswordExpertValidate),changePassword);
 router.get('/list',isAuthenticate,expertList);
 router.get("/notification", isAuthenticate, getNotification);
+
+router.get('/match/competitionList/:type',isAuthenticate,getMatchCompetitionsByType);
+router.get('/match/competition/dates/:competitionId',isAuthenticate,getMatchDatesByCompetitionId);
+router.get('/match/competition/getMatch/:competitionId/:date',isAuthenticate,getMatchDatesByCompetitionIdAndDate);
 
 
 module.exports = router;
